cabal-version:      2.4
name:               turtle-shell
version:            0.1.0.0

executable turtle-shell
    main-is:          Main.hs

    -- If you want more Haskell packages, add them here:
    build-depends:    
        base ^>=4.15.1.0
        , turtle
        , flow
    hs-source-dirs: .
    default-language: Haskell2010

    -- These options enable stack traces on runtime exceptions.
    -- By default, Haskell gives you a useless error message. 
    -- We don't even get line numbers with this.
    -- Profiling, for some reason, is configured in cabal.project.local ???
    ghc-options:
        -O0
        -rtsopts "-with-rtsopts=-xc"
